Se crearon los menus de cada grupo y se añadiron cambios extras

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="advertencia">Advertencia</string>
     <string name="no_aceptar">No aceptar</string>
     <string name="listo">Listo</string>
+    <string name="principiante">Principiante</string>
+    <string name="intermedio">Intermedio</string>
+    <string name="avanzado">Avanzado</string>
 </resources>
