--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="principiante">Principiante</string>
     <string name="intermedio">Intermedio</string>
     <string name="avanzado">Avanzado</string>
+    <string name="perdida_aprox_pecho_principiante">Perdida aprox. de 27.9 Kcal</string>
+    <string name="nivel_principiante">Nivel: Principiante</string>
+    <string name="nivel_intermedio">Nivel: Intermedio</string>
+    <string name="perdida_aprox_pecho_intermedio">Perdida aprox. de 29.9 Kcal</string>
+    <string name="nivel_avanzado">Nivel: Avanzado</string>
+    <string name="perdida_aprox_pecho_avanzado">Perdida aprox. de 30.9 Kcal</string>
 </resources>
